Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51796

Controls focus handling is not consistent when using a mouse

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.7.0 RC
    • 5.6.0 RC
    • Quick: Controls 2
    • None
    • Windows 10
      MSVC2013 64 bits
    • d24e8b312026510937e9d07f72aea1083d12f73a

    Description

      Starting from the gallery example I have reproduced the behavior described in QTBUG-47658 for QtQuick Controls 1.

      Which is:
      Starting with the keyboard focus in a TextField, after clicking on a CheckBox, the focus remains in the TextField. The consequence is that if the user presses space, it will not toggle the CheckBox but insert a space in the TextField.

      Note: This might have been solved by QTBUG-51257.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            bterrier Benjamin Terrier
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes