src/imports/controls/universal/ApplicationWindow.qml
@@ -52,7 +52,6 @@ T.ApplicationWindow {
         parent: window.activeFocusControl
         width: parent ? parent.width : 0
         height: parent ? parent.height : 0
-        visible: parent && !!parent.useSystemFocusVisuals
-                        && (parent.focusReason === Qt.TabFocusReason || parent.focusReason === Qt.BacktabFocusReason)
+        visible: parent && !!parent.useSystemFocusVisuals && !!parent.activeKeyFocus
     }
 }
